Fix alignment of custom checkbox

--- a/src/components/Filters.css
+++ b/src/components/Filters.css
@@ -26,9 +26,9 @@ Common filters styles
   padding-left: 18px;
   margin-left: -18px;
 }
-.Filter label::before {
+.Filter input[type="checkbox"] + label::before {
   position: absolute;
-  top: -1px;
+  top: 1px;
   left: 0px;
   content: "";
   display: inline-block;
@@ -38,20 +38,17 @@ Common filters styles
   border-radius: 4px;
   background-color: #f6f1f2;
 }
-.Filters label:after {
+.Filters input[type="checkbox"] + label:after {
   position: absolute;
   left: 3px;
-  top: 3px;
-  content: "";
+  top: 5px;
+  content: none;
   display: inline-block;
   height: 4px;
   width: 8px;
   border-left: 2px solid #f6f1f2;
   border-bottom: 2px solid #f6f1f2;
   transform: rotate(-45deg);
-}
-.Filter input[type="checkbox"] + label::after {
-  content: none;
 }
 .Filter input[type="checkbox"]:checked + label::after {
   content: "";
